# wsb-cli-exe

./: README.md  stack.yaml  wsb-cli-exe.cabal
app/: Main.hs  ParseArgs.hs
