name:                wsb-cli-exe
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/wsb-cli-exe#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

executable wsb-cli
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  other-modules:       ParseArgs
  build-depends:       base
                     , base64-bytestring
                     , aeson
                     , bytestring
                     , bytestring-conversion
                     , text
                     , mtl
                     , optparse-applicative
                     , wsb-client
                     , wsb-counter-version
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/wsb-cli-exe
